Dissolve Vertices with Tear Boundary Option keeps one vert every two verts. #41568

Closed
opened 2014-08-25 11:24:11 +02:00 by ronan ducluzeau · 5 comments

System Information
Ubuntu 14.04 and Nvidia geforce gtx Titan Black

Blender Version
Broken: 2.71.5 hash 2a44844

Short description of error
Using Dissolve Vertices operator with enabled Tear Boundary option on vertices of boundary of a grid does not dissolves all selected vertices.
It remains one vert every two verts.

Exact steps for others to reproduce the error
From scratch:
Add a grid.
In edit mode, select more than two consecutive verts of a boundary side of grid.
Then, in vertices selection mode, call Dissolve Vertices using X menu.
Finally, check Tear Boundary option.

In attached .blend file, from left to right, there is obtained result using operator for selection of 1,2,3,4,5 vertices.
Test operator on the untouched side of Grid.

DV_Tear_Boundary.blend

**System Information** Ubuntu 14.04 and Nvidia geforce gtx Titan Black **Blender Version** Broken: 2.71.5 hash 2a44844 **Short description of error** Using Dissolve Vertices operator with enabled Tear Boundary option on vertices of boundary of a grid does not dissolves all selected vertices. It remains one vert every two verts. **Exact steps for others to reproduce the error** From scratch: Add a grid. In edit mode, select more than two consecutive verts of a boundary side of grid. Then, in vertices selection mode, call Dissolve Vertices using X menu. Finally, check Tear Boundary option. In attached .blend file, from left to right, there is obtained result using operator for selection of 1,2,3,4,5 vertices. Test operator on the untouched side of Grid. [DV_Tear_Boundary.blend](https://archive.blender.org/developer/F106609/DV_Tear_Boundary.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro
Campbell Barton self-assigned this 2014-08-25 12:28:25 +02:00

This issue was referenced by a71a947c6a

This issue was referenced by a71a947c6af75114ead5f4c1fcc360699f275241

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a71a947c6a.

Closed by commit a71a947c6a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41568
No description provided.