Fix T41568: Dissolve & Tear Boundary Keeps Verts